 * version --> 3.30

Francois VOGEL, 16/02/05
 * Removed duplicate "Add/Change" in fr.msg and it.msg
 * Added strings in the message files
 * .ScipadPreferences.tcl is now saved in the home of Scilab
 * version --> 3.31

Francois VOGEL, 17/02/05
 * Drag'n'drop one or more files at once from the explorer to Scipad now
   works (opens the file(s)).
   Reference: TkDnD package - http://sourceforge.net/projects/tkdnd
   Possible absence of the package is catched (no warning issued).
 * version --> 3.32

Francois VOGEL, 21/02/05
 * Scipad now displays only pruned filenames (and full pathnames in
   case of ambiguity) in the titlebar and windows menu.
 * A lot of drastic code cleaning in filecommands.tcl, infomessages.tcl,
   buffernavigation.tcl, inputtext.tcl plus a few more around those files,
   rationalizing, suppressing old unused or duplicate procs, reindenting,
   removing superfluous comments but adding explanatory comments.
 * version --> 3.33

Francois VOGEL, 23/02/05
 * Few glitches correction about pruned file names.
 * New buffers are now tagged as modified (required changes in scipad.sci).
 * Trying to paste with button-2 when there is no selection does no more
   tag the buffer as modified.
 * Further drastic code cleaning. The only unclean file is now undoredo.tcl
   but this will be removed one day or another anyway to be replaced by the
   text widget undo/redo features.
 * version --> 3.34

Francois VOGEL, 24/02/05
 * New buffers are no more tagged as modified.
 * Trying to exec an empty buffer is catched.
 * Code rationalization:
     - replaced $pad.textarea by $pad.new$winopened
     - inccount, outccount, getccount become setmodified, unsetmodified,
       and getmodified
 * version --> 3.35

Francois VOGEL, 26/02/05
 * The list of the 4 more recently opened/saved files is now available in
   the file menu for quick access.
 * version --> 3.36

Francois VOGEL, 27/02/05
 * Added a number in front of the recent files names.
 * version --> 3.37